--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -41,6 +41,32 @@
             background-color: white;
             color: #6bafd6;
         }
+        .content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            height: calc(100vh - 60px); 
+        }
+        .text-section {
+            flex: 1;
+            padding-right: 20px;
+            font-size: 18px;
+            color: #6bafd6;
+        }
+        .image-section {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .image-section img {
+            width: 400px; 
+            height: 400px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #7363d1;
+        }
     </style>
 </head>
 <body>
@@ -48,12 +74,20 @@
         <div class="navbar-left">Janaina e Nicolas</div>
         <div class="navbar-right">
             <a href="home.html">Home</a>
-            <a href="#presentes">Lista de Presentes</a>
-            <a href="#localizacao">Localização</a>
-            <a href="#historia">Nossa História</a>
+            <a href="Presentes.html">Lista de Presentes</a>
+            <a href="Localização.html">Localização</a>
+            <a href="Historia.html">Nossa História</a>
             <a href="index.html">Confirmar Presença</a>
-            
         </div>
     </nav>
+    <div class="content">
+        <div class="text-section">
+            <h1>Bem-vindos ao nosso casamento!</h1>
+            <p>Estamos muito felizes em compartilhar esse momento especial com você. Aqui você encontrará todas as informações sobre a nossa cerimônia, recepção, lista de presentes e muito mais.</p>
+        </div>
+        <div class="image-section">
+            <img src="/img/janaIKI.jpeg" alt="Janaina e Nicolas">
+        </div>
+    </div>
 </body>
 </html>
