--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300;400&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -67,6 +67,12 @@
             object-fit: cover;
             border: 4px solid #7363d1;
         }
+        h1 {
+            font-family: 'Great Vibes', cursive;
+            font-size: 36px;
+            color: #6bafd6;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
@@ -82,11 +88,12 @@
     </nav>
     <div class="content">
         <div class="text-section">
-            <h1>Bem-vindos ao nosso casamento!</h1>
-            <p>Estamos muito felizes em compartilhar esse momento especial com você. Aqui você encontrará todas as informações sobre a nossa cerimônia, recepção, lista de presentes e muito mais.</p>
+            <h1>Queridos Amigos</h1>
+            <p>O nosso dia está chegando e junto com ele a certeza de que ao nosso lado estarão pessoas mais que especiais, que marcaram a nossa história de alguma forma, seja com boas risadas ou grandes aprendizados.</p>
+            <p>Verdadeiros presentes de Deus em nossas vidas. Por isso será de grande honra termos vocês junto à nós nesse dia tão especial em nossas vidas!</p>
         </div>
         <div class="image-section">
-            <img src="/img/janaIKI.jpeg" alt="Janaina e Nicolas">
+            <img src="/img/janaIKI.jpeg">
         </div>
     </div>
 </body>
