--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            background-color: #6bafd6;
+            background-color: #7363d1;
             color: #fff;
             cursor: pointer;
             font-size: 16px;
@@ -96,7 +96,7 @@
         }
 
         button:hover {
-            background-color: #6bafd6;
+            background-color: #7363d1;
         }
 
         #confirmationMessage {
